# AudioPlayground2

./: .gitignore  .gitmodules  LICENSE  README.md  imgui.ini
.github/workflows/: build.yml
app/: CMakeLists.txt
app/Audio/: Audio.cpp  Audio.hpp  Synth.cpp  Synth.hpp
app/Audio/DSP/: Oscillator.cpp  Oscillator.hpp  Pitch.hpp  Voice.cpp  Voice.hpp
app/Audio/Instruments/: Instrument.cpp  Instrument.hpp  NOscillator.cpp  NOscillator.hpp
app/DSP/: Envelope.cpp  Envelope.hpp  Oscillator.cpp  Voice.cpp  Voice.hpp
app/Engine/: Engine.cpp  Engine.hpp  Input.cpp
app/Instruments/: Instrument.cpp  Instrument.hpp  NOscillator.cpp  NOscillator.hpp
app/Playground/: Playground.cpp
app/Utility/: Relaxed.hpp
app/audio/: audio.cpp  audio.hpp  synth_engine.cpp  synth_engine.hpp
app/engine/: engine.cpp
app/libs/imgui-knobs/: imgui-knobs.cpp
app/src/: Main.cpp  main.cpp
test/: keyboard.py
